SDC-758 Refactor MiniSDC to use SDCClassloader
Change-Id: I35a08c04bd8c3df0ea3654d617a535d74df8cd45
Reviewed-on: https://review.streamsets.net/340
Reviewed-by: Brock Noland <brock@streamsets.com>
Tested-by: StreamSets CI <streamsets-ci-spam@streamsets.com>