@@ -204,7 +204,13 @@
         </execution>
       </executions>
      </plugin>
-
+     <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+            <argLine>-Xmx1024m -XX:PermSize=128m -XX:MaxPermSize=256m</argLine>
+        </configuration>
+      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-deploy-plugin</artifactId>
